--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -55,7 +55,7 @@
   color: #fff;
   border: none;
   border-radius: 4px;
-  font-size: 16px;
+  font-size: 25px;
   cursor: pointer;
 }
 
@@ -79,8 +79,11 @@
   color: #fff;
   border: none;
   border-radius: 4px;
-  font-size: 16px;
+  font-size: 25px;
   cursor: pointer;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
 }
 .load-more:hover {
   background-color: #45a049;
